--- a/index.html
+++ b/index.html
@@ -2,17 +2,23 @@
 <title>Локальное Хранилище Текста</title>
 
 <style>
+* {
+	padding: 0;
+	margin: 0;
+	font-size: 110%;
+}
+
+
 #form {
-	width: 90%;
+	width: 90vw;
 	display: -webkit-flex;
 	display: flex;
 	-webkit-flex-direction: column;
 	flex-direction: column;
-	flex: auto;
-
+	padding: 0.3em;
 }
 
-#form * {
+#form > * {
 	width: 100%;
 	height: 15%;
 	font-size: 200%;
@@ -20,11 +26,11 @@
 }
 
 #form > textarea {
-	height: 20vw;
+	padding: 0.15em;
 }
 
-#text {
-	height: 500px;
+#form > textarea {
+	height: 20vw;
 }
 
 #h1 {
@@ -32,11 +38,14 @@
 	text-decoration: underline;
 }
 #content {
-	font-size: 150%;
+	font-size: 170%;
+	padding: 0.3em;
 }
 
 .card {
+	display: -webkit-flex;
 	display: flex;
+	-webkit-flex-direction: column;
 	flex-direction: column;
 	background-color: #aecbcf;
 	padding: 1%;
@@ -45,14 +54,17 @@
 
 .delButton {
 	align-self: flex-end;
+	font-size: 110%;
+	width: 2em;
+	height: 2em;
 }
 
 </style>
-<h1 id="h1">Локальное Хранилище Текста</h1>
-<hr/>
 
 
 <div id="form">
+	<h1 id="h1">Локальное Хранилище Текста</h1>
+	<hr/>
 	<button id="clearButton">Очистить хранилище</button>
 	<textarea id="textarea" placeholder="текст для сохранения"></textarea>
 	<button id="saveButton">Сохранить</button>
